web-infras/parser/tests/fixtures/babel/es2015/class/invalid-escape-get/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,20)
1|class X { ge\u0074 x() {} }
 |                  ^
